# node-worker-polyfill

./: README.md  index.js  package.json
example/: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js  rust-toolchain.toml
example/src/: lib.rs
example/src/js/: index.js  main.js  worker.js
example/thread-pool/: Cargo.toml  worker.js
example/thread-pool/src/: lib.rs
