[package]
name = "example"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2021"

[workspace]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.37"
rayon = "1.7.0"
log = "0.4.20"
console_log = "1.0.0"
thread-pool = { path = "./thread-pool" }


[dependencies.web-sys]
version = "0.3.64"
features = [
    "Url",
]
