[package]
name = "thread-pool"
version = "0.1.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
rayon = "1.7.0"
futures = "0.3.28"
spmc = "0.3.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Navigator",
    "Url",
    "Window",
    "Worker",
]
